modified the page with about me and contact page and added styles to it

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Roboto&display=swap");
 
 html {
   box-sizing: border-box;
@@ -7,8 +8,7 @@ html {
   margin: 0;
 }
 
-.main-heading {
-  position: absolute;
+.main-header {
   align-items: center;
   height: 92px;
   display: flex;
@@ -17,22 +17,26 @@ html {
   background: #3c3a39;
 }
 
-.pageone {
-  position: absolute;
+.page1 {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   padding: 120px 24px;
-  gap: 12px;
   width: 327px;
-  height: 470px;
   top: 92px;
   background: #1c1a19;
 }
 
+main {
+  width: 375px;
+  height: 6715px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+}
+
 .main-title {
   width: 327px;
-  height: 124px;
   font-family: 'Crete Round', serif;
   font-style: normal;
   font-weight: 400;
@@ -43,7 +47,7 @@ html {
   flex: none;
 }
 
-.profession {
+.job-title {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -53,7 +57,7 @@ html {
   color: #fff5e1;
 }
 
-.navbar {
+.union {
   margin-right: 10%;
 }
 
@@ -64,7 +68,7 @@ html {
   margin-bottom: 4px;
 }
 
-.paragraph {
+.regular-text {
   width: 327px;
   height: 123px;
   font-family: 'Poppins', sans-serif;
@@ -75,28 +79,25 @@ html {
   color: #fff;
 }
 
-.heading-text {
+.header-text {
   width: 77px;
   height: 24px;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
-  display: flex;
   align-items: center;
   text-align: center;
   color: #fff;
   padding-left: 15%;
-  flex-grow: 0;
   font-family: 'Roboto', sans-serif;
-  text-decoration: none;
 }
 
 ul {
   list-style-type: none;
 }
 
-.social-media-icons {
+.social-media {
   width: 200px;
   height: 40px;
   display: flex;
@@ -107,7 +108,501 @@ ul {
   flex-grow: 1;
   width: 26px;
   height: 26px;
+  margin: 20px 0px 35px 20px;
   display: flex;
   align-items: center;
   justify-content: space-around;
+}
+
+.recent-work {
+  width: 327px;
+}
+
+.recent-header {
+  display: flex;
+  padding-top: 30%;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
+
+.works_header-text {
+  width: 327px;
+  height: 83px;
+  font-family: 'Crete Round', serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 52px;
+  align-items: center;
+  color: #1c1a19;
+}
+
+.line {
+  width: 327px;
+  align-self: center;
+  border: 1px solid #212121;
+  margin-bottom: 20%;
+}
+
+.Works {
+  display: grid;
+  grid-template-rows: repeat(8, 12.5);
+}
+
+.work-img {
+  display: flex;
+  width: 327px;
+  height: 237px;
+  order: 0;
+  align-items: center;
+  align-self: center;
+}
+
+.wtext1 {
+  width: 327px;
+  height: 36px;
+  font-family: 'Crete Round', serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 44px;
+  display: flex;
+  align-items: center;
+  color: #091e42;
+}
+
+.wtext2 {
+  width: 327px;
+  height: 147px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #091e42;
+  order: 1;
+}
+
+.bottun {
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  order: 2;
+  justify-content: space-between;
+}
+
+.icon1 {
+  text-align: center;
+  width: 25px;
+  height: 20px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #091e42;
+}
+
+.icon1-holder {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  padding: 10px 12px;
+  width: 49px;
+  height: 40px;
+  background: #fff;
+  border: 1px solid #8993a4;
+}
+
+.icon2-holder {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px 12px;
+  width: 56px;
+  height: 40px;
+  background: #fff;
+  border: 1px solid #8993a4;
+}
+
+.icon3-holder {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px 12px;
+  width: 95px;
+  height: 40px;
+  background: #fff;
+  border: 1px solid #8993a4;
+}
+
+.icon4-holder {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px 12px;
+  width: 61px;
+  height: 40px;
+  background: #fff;
+  border: 1px solid #8993a4;
+}
+
+.link-button :hover,
+.link-button2 :hover,
+.sub-bot :hover {
+  color: blue;
+}
+
+.link-button {
+  margin-bottom: 5%;
+  display: flex;
+  align-items: center;
+  padding: 12px;
+  width: 124px;
+  height: 48px;
+  background: #ff6b00;
+  border: none;
+  order: 4;
+}
+
+.ltext1 {
+  display: flex;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #fff;
+}
+
+.card {
+  background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url("img2.png");
+  background-repeat: no-repeat;
+  line-height: 75px;
+  background-size: 327px 386px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+.card1 {
+  order: 6;
+}
+
+.card2 {
+  order: 7;
+}
+
+.card3 {
+  order: 7;
+}
+
+.card4 {
+  order: 7;
+}
+
+.card5 {
+  order: 7;
+}
+
+.card6 {
+  order: 7;
+}
+
+.cardt {
+  display: flex;
+  width: 295px;
+  height: 81px;
+  font-family: 'Crete Round', serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 44px;
+  color: #fff;
+  padding-top: 30%;
+  padding-left: 5%;
+}
+
+.cardp {
+  display: flex;
+  padding-left: 5%;
+  width: 295px;
+  height: 87px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #fff;
+}
+
+.cardb {
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  column-gap: 10px;
+  margin: 0 0 30px 10px;
+}
+
+.bot {
+  display: flex;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #fff;
+}
+
+.button1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px 12px;
+  width: 40px;
+  height: 40px;
+  background: rgba(255, 255, 255, 0.24);
+  background-size: 10px 20px;
+}
+
+.button2 {
+  flex-direction: row;
+  align-items: center;
+  padding: 10px 12px;
+  width: 95px;
+  height: 40px;
+  background: rgba(255, 255, 255, 0.24);
+}
+
+a {
+  text-decoration: none;
+}
+
+.button3 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px 12px;
+  width: 61px;
+  height: 40px;
+  background: rgba(255, 255, 255, 0.24);
+}
+
+.link-button2 {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10%;
+  width: 327px;
+  height: 48px;
+  background: #ff6b00;
+  border: none;
+}
+
+.About-myself {
+  display: flex;
+  flex-direction: column;
+  width: 375px;
+  background: #1c1a19;
+}
+
+.about-text {
+  width: 327px;
+  height: 79px;
+  font-family: 'Crete Round', serif;
+  font-style: normal;
+  align-self: center;
+  font-weight: 400;
+  font-size: 72px;
+  line-height: 88px;
+  padding-top: 10%;
+  letter-spacing: 0.37px;
+  color: #ff6b00;
+}
+
+.regular-text2 {
+  align-self: center;
+  width: 327px;
+  height: 148px;
+  font-family: 'Inter', serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #f4f5f7;
+}
+
+.resume {
+  display: flex;
+  padding: 12px;
+  width: 159px;
+  height: 48px;
+  background: #ff6b00;
+  color: #fff;
+  border: none;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  text-align: center;
+  margin-left: 6%;
+}
+
+.line2 {
+  margin: 50% 0 20%;
+  border: 1px solid #fff;
+  align-self: center;
+  width: 80%;
+}
+
+.lang {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bar {
+  align-content: center;
+  display: flex;
+  gap: 20px;
+}
+
+.titr {
+  display: flex;
+  width: 164px;
+  height: 24px;
+  font-family: 'Inter', serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 44px;
+  color: #fff;
+  align-items: center;
+  text-align: center;
+}
+
+.shape1 {
+  display: flex;
+  width: 18px;
+  height: 18px;
+  background: #ff6b00;
+  transform: rotate(-45deg);
+}
+
+.about-bar {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.lang-text {
+  width: 150px;
+  height: 54px;
+  font-family: sans-serif,'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-style: normal;
+  font-weight: 200;
+  font-size: 18px;
+  text-align: center;
+  line-height: 43px;
+  display: flex;
+  align-items: center;
+  color: #fff;
+}
+
+.shape2 {
+  width: 18px;
+  height: 18px;
+  margin-right: 5px;
+  background: #ff6b00;
+}
+
+.shape3 {
+  width: 18px;
+  height: 18px;
+  background: #ff6b00;
+  border-radius: 150px;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+
+.contact-text {
+  padding-top: 10%;
+  width: 350px;
+  height: 216px;
+  font-family: 'Inter', serif;
+  font-style: normal;
+  font-weight:700;
+  font-size: 28px;
+  line-height: 44px;
+  text-align: center;
+  color: #172b4d;
+}
+
+.form-text {
+  outline: none;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  border: none;
+  color: #979493;
+}
+
+.form-line2 {
+  height: 1px;
+  background: #dbd8d7;
+}
+
+.form-text2 {
+  width: 100%;
+  height: 150px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
+  outline: none;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  border: none;
+  color: #3c3a39;
+}
+
+.sub-bot {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding: 12px;
+  width: 131px;
+  height: 48px;
+  background: #ff6b00;
+  border: none;
+  align-self: center;
+}
+
+.icon2 {
+    flex-grow: 1;
+    width: 26px;
+    height: 46px;
+    margin: 10px 88px 40px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
