--- a/styles.css
+++ b/styles.css
@@ -506,7 +506,7 @@ a {
 .lang-text {
   width: 150px;
   height: 54px;
-  font-family: sans-serif,'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'sans-serif', 'Gill Sans', Calibri, 'Trebuchet MS';
   font-style: normal;
   font-weight: 200;
   font-size: 18px;
@@ -598,11 +598,12 @@ a {
 }
 
 .icon2 {
-    flex-grow: 1;
-    width: 26px;
-    height: 46px;
-    margin: 10px 88px 40px 0px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  flex-grow:  1;
+  width:  26px;
+  height:  46px;
+  margin:  10px 88px 40px 0;
+  display:  flex;
+  align-items:  center;
+  justify-content:  space-between;
 }
+
