--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ ul {
   flex-grow: 1;
   width: 26px;
   height: 26px;
-  margin: 20px 0px 35px 20px;
+  margin: 20px 2px 35px 20px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -506,7 +506,7 @@ a {
 .lang-text {
   width: 150px;
   height: 54px;
-  font-family: 'sans-serif', 'Gill Sans', Calibri, 'Trebuchet MS';
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-style: normal;
   font-weight: 200;
   font-size: 18px;
@@ -543,7 +543,7 @@ a {
   height: 216px;
   font-family: 'Inter', serif;
   font-style: normal;
-  font-weight:700;
+  font-weight: 700;
   font-size: 28px;
   line-height: 44px;
   text-align: center;
@@ -598,12 +598,11 @@ a {
 }
 
 .icon2 {
-  flex-grow:  1;
-  width:  26px;
-  height:  46px;
-  margin:  10px 88px 40px 0;
-  display:  flex;
-  align-items:  center;
-  justify-content:  space-between;
+  flex-grow: 1;
+  width: 26px;
+  height: 46px;
+  margin: 10px 88px 40px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-
