--- a/styles.css
+++ b/styles.css
@@ -1,207 +1,73 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,700;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,400;0,700;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Meera+Inimai&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Poppins&display=swap');
 
-* {
-  --background: #1c1a19;
-
+html {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
-  text-decoration: none;
-  list-style: none;
-  box-sizing: border-box;
 }
 
-body {
-  font-family: montserrat, sans-serif;
-  background: #e5e5e5;
-}
-
-nav {
+.main-header {
+  position: absolute;
+  align-items: center;
+  height: 92px;
   display: flex;
   justify-content: space-between;
-  padding: 24px;
+  width: 375px;
   background: #3c3a39;
-  font-family: "Roboto", sans-serif;
-  color: #fff;
 }
 
-.logo a {
-  color: #fff;
-  background-color: #3c3a39;
-  font-family: sans-serif;
-}
-
-a .navImage {
-  background-color: #fff;
-}
-
-.container {
+.page1 {
+  position: absolute;
   display: flex;
   flex-direction: column;
-  height: 100vh;
   align-items: flex-start;
   padding: 120px 24px;
   gap: 12px;
-  background:
-    var(--background) url("Group.png") no-repeat 100%
-    100%;
+  width: 327px;
+  height: 470px;
+  top: 92px;
+  background: #1c1a19;
 }
 
-.headline {
-  font-family: "Crete Round", sans-serif;
+.main-title {
+  width: 327px;
+  height: 124px;
+  font-family: 'Crete Round', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 56px;
   line-height: 64px;
   letter-spacing: 0.37px;
-  color: #ff6800;
+  color: #ff6b00;
   flex: none;
-  order: 0;
-  flex-grow: 0;
 }
 
-.title {
-  font-family: "Roboto", sans-serif;
+.job-title {
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
-  display: flex;
+  line-height: 32px;
   align-items: center;
-  flex: none;
-  flex-grow: 0;
   color: #fff5e1;
 }
 
-.introduction {
-  font-family: "Poppins", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  flex-grow: 0;
-  color: #fff;
+.union {
+  margin-right: 10%;
 }
 
-.icons ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  margin-top: 1.2em;
-  padding: 0 0 0 1em;
+.vector {
+  width: 20px;
+  height: 3px;
+  background-color: #fff;
+  margin-bottom: 4px;
 }
 
-.icons ul li {
-  padding: 0 1.2em 0 0;
-}
-
-.work {
-  display: grid;
-
-  /* padding: 114px 24px; */
-  gap: 50px;
-}
-
-.multistories {
-  display: flex;
-  flex-direction: column;
-  padding: 60px 24px;
-  gap: 12px;
-}
-
-.multistories h1 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: "crete Round", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 30px;
-  padding: 25px;
-}
-
-.multistories h3 {
-  display: flex;
-  align-items: center;
+.regular-text {
   width: 327px;
-  height: 36px;
-  flex: none;
-  flex-grow: 0;
-  font-family: "Crete Round", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 44px;
-  color: #091e42;
-}
-
-.multistories p {
-  flex: none;
-  flex-grow: 0;
-  color: #091e42;
-  width: 327px;
-  height: 147px;
-  font-family: "inter", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-}
-
-.languages {
-  display: flex;
-  justify-content: space-between;
-  max-width: 300px;
-}
-
-.multistories button {
-  width: 155px;
-  height: 60px;
-  padding: 12px;
-  gap: 10px;
-  background: #ff6b00;
-  border-color: #ff6b00;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 17px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  color: #fff;
-}
-
-.project {
-  background:
-    linear-gradient(
-      180.45deg,
-      rgba(38, 38, 38, 0) 0.75%,
-      rgba(38, 38, 38, 0.9) 61.94%
-    ),
-    url(img2.png);
-  display: flex;
-  flex-direction: column;
-  padding: 120px 24px;
-  gap: 12px;
-}
-
-.project h1 {
-  flex: none;
-  width: 295px;
-  height: 81px;
-  font-family: "Crete Round", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 44px;
-  color: #fff;
-}
-
-.project p {
-  width: 295px;
-  height: 87px;
-  font-family: "Inter", sans-serif;
+  height: 123px;
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -209,167 +75,38 @@ a .navImage {
   color: #fff;
 }
 
-.projectLanguages {
-  display: flex;
-  justify-content: space-between;
-  max-width: 300px;
-}
-
-.project button {
-  justify-content: center;
-  background: #ff6b00;
-  border-color: #ff6b00;
-  width: 303px;
-  height: 49px;
-  font-family: "Inter", sans-serif;
+.header-text {
+  width: 77px;
+  height: 24px;
   font-style: normal;
   font-weight: 700;
-  font-size: 17px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #fff;
-  margin-bottom: 25px;
-}
-
-.about {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  align-items: flex-start;
-  padding: 120px 24px;
-  gap: 12px;
-  background:
-    var(--background) url("illustrationlogo.png") no-repeat 100%
-    100%;
-}
-
-.about button {
-  justify-content: center;
-  background: #ff6b00;
-  border-color: #ff6b00;
-  width: 303px;
-  height: 49px;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 17px;
+  font-size: 18px;
   line-height: 24px;
   display: flex;
   align-items: center;
   text-align: center;
-  letter-spacing: 0.03em;
   color: #fff;
-  margin-bottom: 25px;
-}
-
-.aboutList {
-  display: flex;
-  flex-direction: column;
-  background-color: #1c1a19;
-}
-
-.aboutList ul {
-  padding: 60px 24px;
-  flex-direction: column;
-  font-family: "InaiMathi", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  gap: 24px;
-  font-size: 32px;
-  line-height: 44px;
-  display: flex;
-  align-items: center;
-  color: #fff;
-  flex: none;
+  padding-left: 15%;
   flex-grow: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
-.aboutList ul li {
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 43px;
+ul {
+  list-style-type: none;
+}
+
+.social-media {
+  width: 200px;
+  height: 40px;
+  display: flex;
+  align-content: space-between;
+}
+
+.icon {
+  flex-grow: 1;
+  width: 26px;
+  height: 26px;
   display: flex;
   align-items: center;
-  text-align: center;
-  color: #fff;
-  flex: none;
-  flex-grow: 0;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 120px 24px;
-  gap: 58px;
-  background-color: white;
-}
-
-.form h1 {
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 44px;
-  text-align: center;
-  color: #172b4d;
-  flex: none;
-  flex-grow: 0;
-}
-
-.contact {
-  display: flex;
-  flex-direction: column;
-
-  /* align-items: center; */
-  padding: 0;
-  margin: 0 auto;
-  width: 400px;
-  height: 330px;
-  border: none;
-}
-
-input {
-  border: none;
-  border-bottom: 1px solid #dbd8d7;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 24px;
-  height: 50px;
-  padding-left: 10px;
-}
-
-textarea {
-  padding: 10px;
-  border: none;
-  background: #fbf8f7;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 24px;
-}
-
-.contact button {
-  align-self: center;
-  gap: 10px;
-  height: 60px;
-  width: 140px;
-  background-color: #ff6b00;
-  border: none;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 17px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  text-align: center;
-  color: #fff;
-  margin-top: 15px;
+  justify-content: space-around;
 }
