--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ html {
 .page1 {
   row-gap: 1px;
   background-image: url("/images/backgroundimage.png");
+  background-size: 100%;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
@@ -57,6 +58,8 @@ main {
   font-size: 24px;
   line-height: 32px;
   align-items: center;
+  position: relative;
+  bottom: 20px;
   color: #fff5e1;
 }
 
@@ -71,15 +74,17 @@ main {
   margin-bottom: 4px;
 }
 
-.regular-text {
-  margin-bottom: 10px;
+.regular-text { 
   width: 327px;
-  font-family: 'Poppins', sans-serif;
+  height: 123px;
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  color: #fff;
+  position: relative;
+  bottom: 35px;
+  color: #FFFFFF;
 }
 
 .header-text {
@@ -422,7 +427,11 @@ a {
   display: flex;
   flex-direction: column;
   width: 375px;
-  background: #1c1a19;
+  background-image: url(images/aboutme.png);
+  background-position-x: right;
+  background-position-y: 25%;
+  background-repeat: no-repeat;
+  background-color: #1c1a19;
   height: 1000;
 }
 
@@ -504,6 +513,7 @@ a {
 ul.menu {
   display: flex;
   flex-flow: column;
+  background-color: #1c1a19;
 }
 
 li ul.menu {
@@ -589,7 +599,7 @@ li {
   outline: none;
   font-family: 'Inter', sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 15px;
   line-height: 24px;
   display: flex;
@@ -610,21 +620,16 @@ li {
 }
 
 .form-text2 {
-  width: 100%;
-  height: 150px;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  border-radius: 4px;
-  resize: none;
   outline: none;
   font-family: 'Inter', sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 15px;
   line-height: 24px;
+  display: flex;
+  align-items: center;
   border: none;
-  background: #fbf8f7;
+  color: #979493;
 }
 
 .sub-bot {
