--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ html {
   display: flex;
   justify-content: space-between;
   width: 375px;
-  background:#3c3a39;
+  background: #3c3a39;
 }
 
 .page1 {
@@ -74,10 +74,10 @@ main {
   margin-bottom: 4px;
 }
 
-.regular-text { 
+.regular-text {
   width: 327px;
   height: 123px;
-  font-family: 'Poppins','Arial', 'Helvetica', 'sans-serif';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
