--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ html {
 
 .page1 {
   row-gap: 1px;
-  background-image: url("/images/backgroundimage.png");
+  background-image: url("./images/backgroundimage.png");
   background-size: 100%;
   background-repeat: no-repeat;
   display: flex;
@@ -301,7 +301,7 @@ ul {
 }
 
 .card {
-  background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url("/images/img2.png");
+  background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url("./images/img2.png");
   background-repeat: no-repeat;
   line-height: 75px;
   background-size: 327px 386px;
@@ -427,7 +427,7 @@ a {
   display: flex;
   flex-direction: column;
   width: 375px;
-  background-image: url(images/aboutme.png);
+  background-image: url(./images/aboutme.png);
   background-position-x: right;
   background-position-y: 25%;
   background-repeat: no-repeat;
