--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ ul {
   align-items: center;
 }
 
-.social-media-under {
+.social-media-below {
   margin-top: 5px;
   margin-left: 109px;
   width: 200px;
